src/style.css
:root{
    --defaultBackground : #c2cbed;
    --weatherboxDayBG: rgb(187, 216, 242);
    --weatherboxNightBG : rgb(118, 138, 154);
    --weatherboxDayColor : black;
    --weatherboxNightColor:white;

}


body{
    margin:0px;
    padding:0px;
    height: 100dvh; 
    font-family: monospace;
    font-size: large;
    background-color: var(--defaultBackground);

    
}


.mainNightBg{
    background-color:#1c1c1d ; 
    color: white;
}



.weather-gif{
  max-width: 15rem;
  grid-column: 3;
  
  max-height: 15rem;
  border-radius: 8px;
  border:none;
  transition: transform 0.3s;
  justify-self: center;
  align-self:center;
  padding-top: 2rem;
}

.weather-gif:hover {
  transform: scale(1.05); 

  

}


main{
    height: 100dvh;
   
    width: 100%;
    display:grid; 
    background-color: var(--defaultBackground);
    grid-template-columns: 1fr 2fr 1fr;
    place-items: center;
}


.mainContent{
    grid-column: 2;
    display: flex;
    flex-direction: column;
    gap:1rem;
    height: 100%;   
    justify-self: center;
    align-items: center;

    padding-top:2rem;

    form{
        display:flex;
       justify-content: center;
        align-items: center;
        gap:0.5rem;

        p{
            font-size: 1.5rem;
        }

        #weather-search{
            border-radius: 2rem;
            padding:0.8rem;
            border: none;
            outline: none;
            height: 2rem;
        }

        #weather-search:focus{
            outline: 2px solid yellow;
        }

        #weather-search:user-invalid{
            outline:2px solid red;
        }
    }


}

li{
    list-style: none;
}

header{
    padding-left:1rem;
    padding-right:1rem;
    display:flex;
    background-color: #1b998a41;
    align-items: center;
    justify-content: space-between;
    ul{
        gap:2rem;
        display:flex;
        li:hover{
            border-bottom: 1px solid green;
            color: beige;
            cursor: pointer; 
        }
        li:active{
            background-color: #ddd;
            transform: translateY(1px);
        }
    }
}



.icons{
    height: 20px;
    width : 20px;
    transition: 0.2s all;

}

.icons:hover{
        transform: scale(1.8);
}

.footer{
    display: flex;
    color:white;    
    justify-content: center;
    text-align: center;
    text-wrap-style: pretty;
    align-items: center;
    flex-direction: row;
    background-color: #061826;
    width: 100vw;
    margin:0px;
    text-decoration:wavy;
    font-size: 0.7rem;
    
    .footer-link{
        text-decoration: none;
        align-items: center;
        color: white;
        text-shadow:  1px 1px rgba(0, 0, 0, 0.5);
        display:flex;
        transition: 0.2s all ease-in-out;
        gap:0.3rem;

        .icons.github {
            transition: 0.2s all ease-out;
            filter: invert(99%) sepia(1%) saturate(2975%) hue-rotate(190deg) brightness(94%) contrast(108%);
        }

        .icons.github:hover{
            transform: rotate(360deg);
        }
    }

    .footer-link:hover{
        transform: scale(1.3);
        
    }
}


.weatherBox{
    width: 20rem;
    height:27rem;
    border:1px solid black;
    
    .addressTitle{
        font-size: 1.5rem;
    }

}

.today-Weather-Icon{
    width:8rem;
    height:6rem;
}

.weatherTempBox{
    display:flex;
    justify-content: center;
    align-items: center;
    gap:1rem;
    .tempInfo{
        font-size: 2rem;
    }

}

.weatherBox{
    display:flex;
    flex-direction: column;
    align-items: center;
    background-color: var(--weatherboxDayBG);
    color: var(--weatherboxDayColor);
    border: 1px dotted #2196F3;

}

.weatherNightBG{
    background-color: var(--weatherboxNightBG);
    color: var(--weatherboxNightColor);
}


.weatherInfoBox{
    display:flex;
    gap:1.5rem;
    justify-content: space-between;
    align-items: center;
    font-size: 1.2rem;

    .minMaxBox{
        display: flex;
        align-items: center;
        justify-content: center;
        flex-direction: column;
    }
}



.weatherCardBox{
    display:flex;
    gap:1rem;
    justify-content:center;
    align-items: center;
    height: 100%;
    justify-self: flex-end;

    .weatherCard{
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;

        .iconCard {
            width: 4rem;
            height: 4rem;
}

    }

}


@media screen  and (max-width:750px){
    .weather-gif{
        display: none;
    }
    main{
        display: flex;
        flex-direction: column;
    }
    .mainContent{
        flex-direction: column;
        align-items: center;
        form{
            p{
                font-size: 1rem;
            }

        }

    }
    
    
}



.weatherTempData{
  display:flex;
  width: 100%;
  justify-content: space-around;
  align-items: center;
}


.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #2196F3;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}


#weather-search-btn{
    border-radius: 2rem;
    height: 2rem;
    padding: 1rem;
    display:flex;
    justify-content: center;
    align-items: center;

    

}

#weather-search-btn:active{
        background-color: rgb(196, 196, 186);
        color: white;
    }






#aboutContent{
    margin: 0;
    padding: 4rem 2rem;
    background: #c2cbed;
    font-family: monospace;
    font-size: 1rem;
    color: #1a1a2e;
    max-width: 600px;
    display: none;


    h1 { font-size: 1.6rem; margin-bottom: 0.5rem; }
    p  { line-height: 1.8; color: #3a3a5a; margin-bottom: 1.5rem; }

    ul {
    padding-left: 1.2rem;
    line-height: 2;
    color: #3a3a5a;
    margin-bottom: 1.5rem;
    }

    a { color: #5a5fcf; }

    hr {
    border: none;
    border-top: 1px solid rgba(90,95,207,0.3);
    margin: 2rem 0;
    }
}

#loading-overlay {
    grid-column: 2;
    border: 8px solid #f3f3f3; 
    border-top: 8px solid #3498db; 
    border-radius: 50%;
    width: 50px;
    height: 50px;
    animation: spin 1s linear infinite;
    display:flex;
    align-self: center;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

